[dependencies]
arrow2 = {workspace = true}
async-trait = "0.1.88"
bytes = "1.10.1"
common-error = {path = "../common/error", default-features = false}
daft-core = {path = "../daft-core", default-features = false}
daft-dsl = {path = "../daft-dsl", default-features = false}
ffmpeg-next = {version = "7.1.0", default-features = false, features = ["codec", "format", "filter", "software-scaling"]}
libc = "0.2.173"
log = {workspace = true}
num-traits = "0.2.19"
serde = {workspace = true}
thiserror = "2.0.12"
tokio = {workspace = true}
typetag = {workspace = true}
base64.workspace = true

[dependencies.image]
default-features = false
features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp", "hdr"]
version = "0.25.5"

[features]
python = ["common-error/python"]

[lints]
workspace = true

[package]
name = "daft-video"
edition.workspace = true
version.workspace = true
